# openbis-tools

./: .gitignore  CLAUDE.md  README.md  credentials.example  pyproject.toml
.github/workflows/: build.yml
data/ms-sequence-files/hfx_minerva/: M2512.csv  M2602.csv
data/ms-sequence-files/timstof/: CK_2511_LFQ3-2.xlsx  SK_2603_9129_Stenkula_260303.xlsx
deploy/: README.md  obtools-qc.bat  qc-dashboard-sync.bat
packaging/: README.md  build.ps1  build.sh  launch.py  obtools.spec  portable-readme.txt
src/obtools/: __init__.py  auth.py  autolink.py  cli.py  connection.py  diann.py  download.py  ingest.py  locate.py  paths.py  register.py  register_tsv.py  search.py  sequence_timmie.py  upload.py  vocab.py
