[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openbis-tools"
version = "0.1.0"
description = "Proteomics-focused OpenBIS CLI toolkit — DIA-NN integration, FASTA/library upload, parent-child auto-linking"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CK" }]
dependencies = ["pybis>=1.37.3"]

[project.scripts]
obtools = "obtools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
