[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openbis-tools"
version = "0.2.3"
description = "Proteomics-focused OpenBIS CLI toolkit — DIA-NN integration, FASTA/library upload, parent-child auto-linking"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CK" }]
dependencies = ["pybis>=1.37.3"]

[project.optional-dependencies]
# Passphrase-encrypted credentials for the portable USB build (`obtools cred set`)
secure = ["cryptography>=41"]

[project.scripts]
obtools = "obtools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
